2006-02-19 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field_value.h
	(openvrml::field_value): The Microsoft C/C++ compiler 14.0 seems
	picky about requiring the OPENVRML_API macro in the friend
	declaration of operator<<.

2006-02-19 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.h
	(openvrml::vec3f): Added missing OPENVRML_API.
	(openvrml::vec3d): Added missing OPENVRML_API.

2006-02-19 Braden McDaniel  <braden@endoframe.com>

	Added member functions to return the root scope from
	openvrml::browser and openvrml::scene.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::root_scope() const): Added function.  Return
	the root scope.
	(openvrml::scene::root_scope() const): Added function.  Return
	the root scope.
	* src/libopenvrml/openvrml/browser.h
	(openvrml::browser): Added member function root_scope.
	(openvrml::scene): Added member function root_scope.

2006-02-19 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.h
	(openvrml::node::scope() const): Return a reference to a const
	scope.

2006-02-18 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/private.h: Forward declare field_value types to
	avoid depencency on <openvrml/field_value.h>.

2006-02-17 Braden McDaniel  <braden@endoframe.com>

	Define openvrml::vec2f, openvrml::vec2d, openvrml::vec3f, and
	openvrml::vec3d as classes rather than class template instances.
	The approach of keeping the function template definitions in the
	implementations and providing explicit template instantiations
	plays poorly with gcc's symbol visibility (and culling) machinery.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h

2006-02-17 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(text_node::update_face()): Moved FontconfigError and
	FreeTypeError exception classes out of the function so that they