@@ -60,7 +60,7 @@ namespace openvrml {
 
 
     template <typename FieldValue>
-    class OPENVRML_API field_value_listener : public virtual event_listener {
+    class field_value_listener : public virtual event_listener {
         BOOST_CLASS_REQUIRE(FieldValue, openvrml, FieldValueConcept);
 
     public:
@@ -136,7 +136,7 @@ namespace openvrml {
 
 
     template <typename FieldValue>
-    class OPENVRML_API node_field_value_listener :
+    class node_field_value_listener :
         public virtual node_event_listener,
         public field_value_listener<FieldValue> {
     public:
@@ -193,7 +193,7 @@ namespace openvrml {
 
 
     template <typename FieldValue>
-    class OPENVRML_API field_value_emitter : public virtual event_emitter {
+    class field_value_emitter : public virtual event_emitter {
         BOOST_CLASS_REQUIRE(FieldValue, openvrml, FieldValueConcept);
 
     public:
